<resources>
    <string name="app_name">Simple Note</string>
    <string name="onboard_text">Jot Down anything you want to\nachieve, today or in the future</string>
    <string name="onboard_button_text">Let\'s Get Started</string>
    <string name="login_title">Let\'s Login</string>
    <string name="login_subtitle">And notes your idea</string>
    <string name="email_title">Email Address</string>
    <string name="email_hint">Example: johndoe@gmail.com</string>
    <string name="password_title">Password</string>
    <string name="password_hint">********</string>
    <string name="login_button_text">Login</string>
    <string name="Or">Or</string>
    <string name="login_bottom_text">Don\'t have any account? Register here</string>
    <string name="register_header">Back to Login</string>
    <string name="register_title">Register</string>
    <string name="register_subtitle">And start taking notes</string>
    <string name="fname_title">First Name</string>
    <string name="fname_hint">Example: Taha</string>
    <string name="lname_title">Last Name</string>
    <string name="lname_hint">Example: Hamifar</string>
    <string name="uname_title">Username</string>
    <string name="uname_hint">Example: @HamifarTaha</string>
    <string name="re_password_title">Retype Password</string>
    <string name="register_button">Register</string>
    <string name="register_bottom_text">Already have an account? Login here</string>
    <string name="home_zero_title">Start Your Journey</string>
    <string name="home_zero_subtitle">Every big step start with small step.\nNotes your first idea and start\nyour journey!</string>
    <string name="Home">Home</string>
    <string name="Settings">Settings</string>
    <string name="Back">Back</string>
    <string name="Title">Title</string>
    <string name="new_note">Feel Free to Write Here…</string>
    <string name="invalid_date">Invalid date</string>
    <string name="confirm_title">Want to Delete this Note?</string>
    <string name="confirm_subtitle">Delete Note</string>
    <string name="search_hint">Search…</string>
    <string name="home_title">Notes</string>
    <string name="settings_title">APP SETTINGS</string>
    <string name="settings_change_button">Change Password</string>
    <string name="settings_logout_button">Log Out</string>
    <string name="logout_confirmation">Are you sure you want to log out from the application?</string>
    <string name="Cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="change_password_header">Change Password</string>
    <string name="current_password_text">Please input your current password first</string>
    <string name="current_password_title">Current Password</string>
    <string name="new_password_text">Now, create your new password</string>
    <string name="new_password_title">New Password</string>
    <string name="re_new_password_title">Retype New Password</string>
    <string name="change_password_button">Submit New Password</string>
</resources>