<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/headerWrapper"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="20dp"
                android:layout_height="22dp"
                android:layout_marginEnd="8dp"
                android:paddingHorizontal="7dp"
                android:paddingVertical="6dp"
                android:src="@drawable/ic_back"/>

            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:textSize="16sp"
                android:lineSpacingExtra="3sp"
                android:text="@string/Back"
                android:gravity="center_horizontal|center_vertical"
                android:fontFamily="@font/inter"
                android:textColor="@color/purple"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/change_password_header"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/header"
        android:background="@color/light_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="24dp"
        android:paddingHorizontal="16dp"
        android:layout_below="@id/header">

        <TextView
            android:id="@+id/currentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/current_password_text"
            android:textColor="@color/purple"/>

        <TextView
            android:id="@+id/currentTitle"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/current_password_title"
            android:layout_below="@id/currentText"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:id="@+id/emailContainer"
            android:layout_width="328dp"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:padding="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/currentTitle"
            android:background="@drawable/input_field">

            <EditText
                android:id="@+id/inputCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter"
                android:gravity="top"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:textColorHint="@color/input_gray"
                android:textSize="16sp"
                android:translationY="-1.52sp"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>

        <TextView
            android:id="@+id/newText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="48dp"
            android:layout_below="@id/emailContainer"
            android:fontFamily="@font/inter_medium"
            android:text="@string/new_password_text"
            android:textColor="@color/purple"/>

        <TextView
            android:id="@+id/newTitle"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/new_password_title"
            android:layout_below="@id/newText"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:id="@+id/newContainer"
            android:layout_width="328dp"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:padding="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/newTitle"
            android:background="@drawable/input_field">

            <EditText
                android:id="@+id/inputNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter"
                android:gravity="top"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColorHint="@color/input_gray"
                android:textSize="16sp"
                android:translationY="-1.52sp"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>

        <TextView
            android:id="@+id/reTitle"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="48dp"
            android:layout_centerHorizontal="true"
            android:text="@string/re_password_title"
            android:layout_below="@id/newContainer"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:id="@+id/reContainer"
            android:layout_width="328dp"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:padding="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/reTitle"
            android:background="@drawable/input_field">

            <EditText
                android:id="@+id/inputRe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter"
                android:gravity="top"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColorHint="@color/input_gray"
                android:textSize="16sp"
                android:translationY="-1.52sp"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonLayout"
            android:layout_width="328dp"
            android:layout_height="54dp"
            android:layout_below="@id/reContainer"
            android:layout_marginTop="90dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_purple"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="TouchTargetSizeCheck">

            <TextView
                android:id="@+id/buttonText"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/inter_medium"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/change_password_button"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/buttonIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_arrow"
                android:tint="@color/white"
                tools:ignore="UseAppTint" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>